# fullread

./: CMakeLists.txt  LICENSE  Makefile  README.md
include/: ec_config.h  file_opt.h  network_transfer.h  repair.h
script/: create_env_storagenodes.sh  create_node_io_limitation.sh  delete_env_storagenodes.sh  destroy_node_io_limitation.sh  install_tools.sh  kill_all_storagenodes.sh  limit_all_node_io.sh  limit_network.sh  limit_node_ip_io.sh  make.sh  mount_nvme_and_test.sh  scp_script.sh  start_close_iperf3_server.sh  start_storagenodes.sh  unlimit_all_node_io.sh  unlimit_network.sh
src/client/: client_main.c
src/share_func/: file_opt.c  network_transfer.c  repair.c
src/storagenodes/: storagenodes_main.c
test_file/: CheckSameFile.c  rspeed.c
test_file/read/: IOBandwidth.txt  ec_heterogeneous_read_src.txt  paretoIO.py  read_opt.py
